rpi5/media/jellyfin-ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.anshulg.direct`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: jellyfin
          port: 80
  tls:
    options:
      name: webos
    secretName: jellyfin-public-cert-tls
    domains:
      - main: jellyfin.anshulg.direct
